# sixpool

cafs/: Cargo.toml
cafs/src/: blockstore.rs  fs.rs  index.rs  main.rs  readchain.rs  serializer.rs
cafs/test/: mep
cafs/test/realdemo/systema/lib64/: ld-linux-x86-64.so.2
cafs/test/realdemo/systema/usr/lib/: libc.so.6
cafs/test/realdemo/systemb/usr/lib/: libdl.so.2  libm.so.6
cafs/test/rust_test_and_main/: cafs-f6b0b53b5b5d181e
cafs/test/rust_versions/: cafs
cafs/test/rust_versions_stripped/: cafs  cafs_
cafs/test/samefile/: cafs2
readchain/: Cargo.toml
readchain/src/: lib.rs
welder/: Cargo.toml  Makefile
welder/src/: container.rs  errors.rs  filesystem.rs  main.rs  system.rs
